# laideal

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  ImprimirTicket.xlsx  License.txt  README.md  anadircliente.cpp  anadircliente.h  anadircliente.ui  anadirprenda.cpp  anadirprenda.h  anadirprenda.ui  anadirproveedor.cpp  anadirproveedor.ui  gastos.cpp  gastos.h  gastos.ui  ingresos.cpp  ingresos.h  ingresos.ui  laideal.db  lista_clientes.cpp  lista_clientes.h  lista_clientes.ui  lista_prendas.cpp  lista_prendas.h  lista_prendas.ui  lista_proveedores.cpp  lista_proveedores.h  lista_proveedores.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mkdocs.yml  opencode.json  pyproject.toml  releases_notes.txt  sql_lite.cpp  (+1 more)
.claude/agents/: dead-code-finder.md
.claude/commands/: coding-guidelines.md  release.md  tackle-issue.md  update-docs.md  update-skills.md
.github/: copilot-instructions.md
.github/scripts/: Render-TestSummary.ps1
.github/workflows/: ci.yml  docs.yml  release.yml
.opencode/agents/: dead-code-finder.md
NO_TOCAR_ticket_imprimir/: ImprimirTicket.xlsx  print_ticket.bat
QXlsx/header/: xlsxdocument.h  xlsxworksheet.h
QXlsx/source/: xlsxdocument.cpp  xlsxworksheet.cpp
doc/: planning_verifactu.md
docs/: AI_agent_instructions.md  INDEX.md  README.md  ai_agent_instructions.md  architecture.md  coding_guidelines_audit.md  dead_code_report.md  progress_tracker.md
docs/development/: planning_verifactu.md
docs/modules/: add_garment.md  backup.md  contabilidad.md  facturas.md  imprimir.md  listado.md  mainwindow.md  printing.md  recog_prendas.md  sql_lite.md
docs/modules/printer/: 02_control_methods.md  03_escpos_command_reference.md  04_current_printing_flow.md  05_implementation_plan.md  README.md
docs/modules/verifactu/: INDEX.md  README.md  RESUMEN_IMPLEMENTACION.md  rest_api.md  (+4 more)
docs/printer/: 01_printer_model_and_specs.md  04_current_printing_flow.md  05_implementation_plan.md  README.md
icon/: change_icon.ps1
releases/: create_installer.bat  deploy_laideal_run_in_qt_cmd.bat  find_replace.bat  laideal.iss  laideal_upd.iss  release.bat  release.ps1  zip_folder.bat
resources/: laideal.qrc  laideal.rc.in
src/BackgroundBrushDelegate/: CMakeLists.txt  backgroundbrushdelegate.cpp  backgroundbrushdelegate.h
src/FilterWidget/: CMakeLists.txt
src/Listado/: CMakeLists.txt  genlistado.cpp  genlistado.h  insertnewitem.cpp  insertnewitem.h  listado.cpp  listado.h
src/MySortFilterProxyModel/: CMakeLists.txt  mysortfilterproxymodel.cpp  mysortfilterproxymodel.h
src/NumberFormatDelegate/: CMakeLists.txt  numberformatdelegate.h
src/TableView/: CMakeLists.txt  tableview.cpp  tableview.h
src/TextColorDelegate/: CMakeLists.txt  textcolordelegate.cpp  textcolordelegate.h
src/add_garment/: CMakeLists.txt  add_garment.cpp  add_garment.h  add_garment.ui
src/app/: CMakeLists.txt  cancelinvoicedialog.cpp  cancelinvoicedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pendingsubmitsdialog.cpp  pendingsubmitsdialog.h  rectifyinvoicedialog.cpp  rectifyinvoicedialog.h  voidgarmentsdialog.cpp  voidgarmentsdialog.h
src/appsettings/: CMakeLists.txt  appsettings.cpp  appsettings.h  settingsdialog.cpp  settingsdialog.h
src/backup/: CMakeLists.txt  backup_manager.cpp  backup_manager.h
src/contabilidad/: CMakeLists.txt  contabilidad.cpp  contabilidad.h  contabilidad.ui
src/facturas/: CMakeLists.txt  facturas.cpp  facturas.h  facturas.ui
src/gastos/: CMakeLists.txt  gastos.cpp  gastos.h  gastos.ui  generar_listado.cpp  generar_listado.h  generar_listado.ui  genlistado.cpp  genlistado.h  genlistado.ui  mysortfilterproxymodel.cpp  mysortfilterproxymodel.h
src/imprimir/: CMakeLists.txt  imprimir.cpp  imprimir.h  imprimir.ui  ticket.html
src/ingresos/: CMakeLists.txt  ingresos.cpp  ingresos.h  ingresos.ui
src/lista_clientes/: CMakeLists.txt  anadircliente.cpp  anadircliente.h  anadircliente.ui  lista_clientes.cpp  lista_clientes.h  lista_clientes.ui
src/lista_prendas/: CMakeLists.txt  anadirprenda.h  anadirprenda.ui  lista_prendas.cpp  lista_prendas.h  lista_prendas.ui
src/lista_proveedores/: CMakeLists.txt  anadirproveedor.h  anadirproveedor.ui  lista_proveedores.cpp  lista_proveedores.h  lista_proveedores.ui
src/lista_servicios/: CMakeLists.txt  lista_servicios.cpp  lista_servicios.h  lista_servicios.ui
src/listado/: CMakeLists.txt  genlistado.cpp  genlistado.h  insertnewitem.cpp  insertnewitem.h  listado.cpp  listado.h
src/logging/: CMakeLists.txt  applogger.cpp  applogger.h
src/printing/: CMakeLists.txt  escposbuilder.cpp  escposbuilder.h  printerstatus.cpp  printerstatus.h  statusapiprinter.cpp  statusapiprinter.h  thermalprinter.cpp  thermalprinter.h  ticketrenderer.cpp  ticketrenderer.h
src/recog_prendas/: CMakeLists.txt  pay_dialog.cpp  pay_dialog.h  recog_prendas.cpp  recog_prendas.h  recog_prendas.ui
src/reporthtml/: CMakeLists.txt  reporthtml.cpp  reporthtml.h
src/sql_lite/: CMakeLists.txt  ingresos_schema.h  sql_lite.cpp  sql_lite.h
src/tableview/: CMakeLists.txt  filterwidget.cpp  linkdelegate.cpp  linkdelegate.h  mysortfilterproxymodel.cpp  mysortfilterproxymodel.h  numberformatdelegate.cpp  tableview.cpp  textcolordelegate.cpp  textcolordelegate.h
src/updater/: CMakeLists.txt  updater.cpp  updater.h  updaterdialog.cpp  updaterdialog.h
src/verifactu/: CMakeLists.txt  EJEMPLO_IMPLEMENTACION.cpp  GUIA_PASO_A_PASO.md  INDEX.md  README.md  RESUMEN_IMPLEMENTACION.md  verifactuconfig.cpp  verifactuconfig.h  verifactuintegration.cpp  verifactuintegration.h  verifactuinvoice.cpp  verifactuinvoice.h  verifactumanager.cpp  verifactumanager.h  verifacturesponse.cpp  verifacturesponse.h  verifactutaxitem.cpp  verifactutaxitem.h  verifactutypes.h
tests/: CMakeLists.txt  test_appsettings.cpp  test_backup_manager.cpp  test_contabilidad.cpp  test_escpos.cpp  test_facturas.cpp  test_genlistado.cpp  test_mysortfilterproxymodel.cpp  test_reporthtml.cpp  test_sql_lite.cpp  test_textcolordelegate.cpp  test_ticket_preview.cpp  test_updater.cpp  test_verifactu_models.cpp  test_verifactu_response.cpp
